--- a/ui/style.css
+++ b/ui/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .text-big {
-    font-size: 300%;
+    font-size: 200%;
 }
 
 .bold {
@@ -18,6 +18,9 @@ body {
 
 .img-medium {
     height: 200px;
+}
+.container{
+    margin-left:25px;
 }
 
  
